--- a/GitUser/Base.lproj/Main.storyboard
+++ b/GitUser/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="KLL-Yf-G62">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3mC-kr-y6N">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
@@ -11,7 +11,7 @@
         <!--Login View Controller-->
         <scene sceneID="7cS-Nh-Yvl">
             <objects>
-                <viewController id="3mC-kr-y6N" customClass="LoginViewController" customModule="GitUser" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginVC" id="3mC-kr-y6N" customClass="LoginViewController" customModule="GitUser" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="I9m-Uv-YS7">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -112,6 +112,7 @@
                             <constraint firstItem="PbU-7u-CFf" firstAttribute="leading" secondItem="6JC-ai-qma" secondAttribute="leading" constant="20" id="zxR-aw-KHd"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="O9w-8v-wr7"/>
                     <connections>
                         <outlet property="emailAddressTextField" destination="B75-Yc-F61" id="F7H-YS-TEC"/>
                         <outlet property="loginButton" destination="s7C-iX-FcV" id="Ra1-5M-YWn"/>
@@ -120,7 +121,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hb0-od-sf9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="28" y="-76"/>
+            <point key="canvasLocation" x="1188" y="-76"/>
         </scene>
         <!--Item 2-->
         <scene sceneID="CGH-nX-Ns3">
@@ -131,7 +132,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="HQj-xV-FGc">
-                                <rect key="frame" x="197" y="418.5" width="20" height="20"/>
+                                <rect key="frame" x="197" y="440.5" width="20" height="20"/>
                             </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="8Xm-rO-hPm"/>
@@ -145,12 +146,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ySK-AG-ELF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1795.6521739130437" y="274.55357142857139"/>
+            <point key="canvasLocation" x="3615.9420289855075" y="273.88392857142856"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="va3-Gu-axT">
             <objects>
-                <tabBarController id="KLL-Yf-G62" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="HomeVC" id="KLL-Yf-G62" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="6oi-6i-G5o"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="9vW-2Y-0QD">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -163,7 +165,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ybi-5u-231" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="909" y="-76"/>
+            <point key="canvasLocation" x="2789.8550724637685" y="-76.339285714285708"/>
         </scene>
         <!--Item-->
         <scene sceneID="MmU-1R-uXo">
@@ -226,18 +228,18 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="85d-it-iup" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1795.6521739130437" y="-389.0625"/>
+            <point key="canvasLocation" x="3615.9420289855075" y="-389.0625"/>
         </scene>
         <!--User Detail View Controller-->
         <scene sceneID="yt3-za-fgQ">
             <objects>
                 <viewController id="Buq-qL-w5l" customClass="UserDetailViewController" customModule="GitUser" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="65q-Iw-1YD">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Tnq-DU-uP8">
-                                <rect key="frame" x="16" y="20" width="382" height="491.5"/>
+                                <rect key="frame" x="16" y="108" width="382" height="491.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T5A-y9-m88">
                                         <rect key="frame" x="0.0" y="0.0" width="382" height="20.5"/>
@@ -306,7 +308,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TVv-OD-aYK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2747.826086956522" y="-389.0625"/>
+            <point key="canvasLocation" x="4568.115942028986" y="-389.0625"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="jsb-Kx-8BU">
+            <objects>
+                <navigationController storyboardIdentifier="NavigationController" automaticallyAdjustsScrollViewInsets="NO" id="l1P-Ti-BET" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="87v-Hp-r7Y">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="KLL-Yf-G62" kind="relationship" relationship="rootViewController" id="igY-BC-ARy"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EWp-NX-eJ2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1962" y="-76"/>
         </scene>
     </scenes>
     <resources>
